fix: fix n + 1 problem for Rent crud, remove unused methods in repository, refactor Rent apis